package ca.mcmaster.se2aa4.island.team205;

public interface Mission {

    void updateInformation(String s);

    void takeCommand();

    String finalReport();

    String decision();
}
