package ca.mcmaster.se2aa4.island.team205;

public interface SearchAlgorithm {

    void findEmergencySite();

    PointOfInterest closestCreek();

}
